# designing-hal-in-cpp

./: CMakeLists.txt  README.md  build-and-run-all.sh
src/: main.cpp
src/concepts/: App.hpp  GpioBase.hpp  GpioReal.hpp
src/concepts-inheritance/: App.hpp  GpioBase.hpp  GpioFake.hpp  GpioReal.hpp  main.cpp
src/concepts-no-inheritance/: App.hpp  GpioBase.hpp  GpioFake.hpp  GpioReal.hpp
src/templates/: App.hpp  GpioBase.hpp  GpioFake.hpp  GpioReal.hpp  LedBase.hpp  LedFake.hpp  LedReal.hpp
src/virtual-methods/: App.hpp  GpioBase.hpp  GpioFake.hpp  GpioReal.hpp  LedBase.hpp  LedFake.hpp  LedReal.hpp
src/virtual-methods-with-hal-class/: App.hpp  GpioBase.hpp  GpioFake.hpp  GpioReal.hpp  Hal.hpp
